--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,15 +4,14 @@ Version: 0.0.0.9000
 Authors@R: 
     person("Shixiang", "Wang", , "w_shixiang@163.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-9855-7357"))
-Description: Provides personal common utils for data science and omics analysis,
-  enabling simplicity, reproducibility and productivity.
+Description: Provides personal common utils for data science and omics
+    analysis, enabling simplicity, reproducibility and productivity.
 License: MIT + file LICENSE
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE, roclets = c("collate", "namespace", "rd",
-    "roxytest::testthat_roclet"))
-RoxygenNote: 7.2.0
-Suggests: 
-    testthat (>= 3.0.0)
-Config/testthat/edition: 3
 Imports: 
     scales
+Suggests: 
+    unikn
+Config/testthat/edition: 3
+Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.0
